# siren

./: Cargo.toml  README.md
.cursor/rules/: 001_workspace.mdc  002_cursor_rules.mdc  003_cursor_docs.mdc  100_rust_style.mdc  102_neon_display.mdc  103_linters.mdc
.github/workflows/: cicd.yml
docs/: ARCHITECTURE.md  CHECKLIST.md  SIREN.md
src/: app.rs  errors.rs  lib.rs  main.rs
src/cli/: mod.rs  output.rs
src/commands/: check.rs  detect.rs  fix.rs  format.rs  mod.rs
src/config/: defaults.rs  mod.rs  provider.rs
src/detection/: framework_detection.rs  language_detection.rs  mod.rs  tool_detection.rs
src/models/: language.rs  mod.rs  results.rs  tools.rs
src/output/: mod.rs  terminal.rs
src/runner/: mod.rs
src/tools/: executor.rs  mod.rs  registry.rs
src/tools/html/: djlint.rs  mod.rs
src/tools/javascript/: eslint.rs  mod.rs  prettier.rs  typescript.rs
src/tools/python/: black.rs  mod.rs  mypy.rs  pylint.rs  ruff.rs
src/tools/rust/: clippy.rs  mod.rs  rust_template.rs  rustfmt.rs
src/utils/: file_selection.rs  mod.rs  path_manager.rs
tests/: README.md  cli_tests.rs  config_tests.rs  djlint_tests.rs  executor_tests.rs  file_selection_tests.rs  integration_tests.rs  javascript_tools_tests.rs  language_tests.rs  mod.rs  path_manager_tests.rs  path_optimization_tests.rs  python_package_tests.rs  registry_tests.rs
